[package]
name = "basic-otlp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
once_cell = "1.17"
opentelemetry_api = { version = "0.19.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.12.0", features = ["tonic", "metrics"] }
opentelemetry-semantic-conventions = { version = "0.11.0" }
tokio = { version = "1.0", features = ["full"] }
